# redic

./: Cargo.toml  README.md
src/: client.rs  lib.rs  operation.rs  template.rs  tests.rs
src/template/: proxy.rs
