[package]
name = "redic"
version = "0.1.0"
edition = "2021"

authors = ["photowey <photowey@gmail.com>"]
license = "Apache-2.0"

documentation = "https://docs.rs/redic"
repository = "https://github.com/photowey/redic"
homepage = "https://github.com/photowey/redic"

description = """
An easy-to-use Redis client implemented in Rust.
"""

readme = "README.md"
keywords = ["redis"]
categories = ["caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
